simple-flask/canary-deployment-v2.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: hello-v2
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: hello
      version: v2
  template: 
    metadata:
      labels:
        app: hello
        version: v2
    spec:
      containers:
      - name: hello
        image: ghcr.io/kmaster8/hello:v2
        ports:
        - containerPort: 5050
