simple-flask/deployment-v1.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: hello-v1
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: hello-v1
  template: 
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: hello
        image: ghcr.io/kmaster8/hello:v1
        ports:
        - containerPort: 5050
