simple-flask/svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: stg-service
spec:
  type: ClusterIP
  selector:
    app: hello-v2
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
