simple-flask/ing-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stg-ingress
spec:
  rules:
  - host: test.stg.10.60.200.121.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stg-service
            port:
              number: 5000
